@@ -413,6 +413,7 @@ matching_input_copy_units_output_ufuncs = [
     "take",
     "trace",
     "transpose",
+    "roll",
     "ceil",
     "floor",
     "hypot",
@@ -850,6 +851,7 @@ for func_str, unit_arguments, wrap_output in (
     ("median", "a", True),
     ("nanmedian", "a", True),
     ("transpose", "a", True),
+    ("roll", "a", True),
     ("copy", "a", True),
     ("average", "a", True),
     ("nanmean", "a", True),
