@@ -4,6 +4,7 @@ Pint Changelog
 0.24 (unreleased)
 -----------------
 
+- Implement numpy roll (Related to issue #981)
 - Add `dim_sort` function to _formatter_helpers.
 - Add `dim_order` and `default_sort_func` properties to FullFormatter.
   (PR #1926, fixes Issue #1841)
